@@ -1,7 +1,6 @@
 package fr.olympa.core.spigot.report.commands;
 
 import java.sql.SQLException;
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Map.Entry;
@@ -37,13 +36,10 @@ public class ReportCommand extends ComplexCommand {
 
 	public ReportCommand(Plugin plugin) {
 		super(plugin, "report", "Signale un joueur.", OlympaCorePermissionsSpigot.REPORT_COMMAND, "signale");
-		addArgumentParser("REPORTREASON", (sender, arg) -> ReportReason.values().stream().map(r -> r.getReasonOneWord()).collect(Collectors.toList()), x -> {
-			return ReportReason.getByReason(x.replace("_", " "));
-		}, x -> String.format("&4%s&c doit être une raison tel que &4%s&c", x, ReportReason.values().stream().map(r -> r.getReasonOneWord()).collect(Collectors.joining(", "))));
-
-		addArgumentParser("REPORTSTATUS", (sender, arg) -> Arrays.asList(ReportStatus.values()).stream().map(ReportStatus::getName).collect(Collectors.toList()), x -> {
-			return ReportStatus.get(x);
-		}, x -> String.format("&4%s&c doit être un status tel que &4%s&c", x, Arrays.asList(ReportStatus.values()).stream().map(ReportStatus::getName).collect(Collectors.joining(", "))));
+		addArgumentParser("REPORTREASON", (sender, arg) -> ReportReason.values().stream().map(ReportReason::getReasonOneWord).toList(), x -> ReportReason.getByReason(x.replace("_", " ")),
+				x -> String.format("&4%s&c doit être une raison tel que &4%s&c", x, ReportReason.values().stream().map(ReportReason::getReasonOneWord).collect(Collectors.joining(", "))));
+		addArgumentParser("REPORTSTATUS", (sender, arg) -> Arrays.stream(ReportStatus.values()).map(ReportStatus::getName).toList(), x -> ReportStatus.get(x),
+				x -> String.format("&4%s&c doit être un status tel que &4%s&c", x, Arrays.stream(ReportStatus.values()).map(ReportStatus::getName).collect(Collectors.joining(", "))));
 	}
 
 	@Override
@@ -66,7 +62,7 @@ public class ReportCommand extends ComplexCommand {
 			}
 			try {
 				List<OlympaReport> allReportsAuthors = ReportMySQL.getReportsByAuthor(this.getOlympaPlayer().getId(), 100);
-				if (allReportsAuthors.size() > 2 && allReportsAuthors.get(2).getTime() > Utils.getCurrentTimeInSeconds() - 10 * 60) {
+				if (allReportsAuthors.size() >= 2 && allReportsAuthors.get(1).getTime() > Utils.getCurrentTimeInSeconds() - 10 * 60) {
 					sendError("Tu peux faire seulement 2 reports toutes les 10 minutes.");
 					return;
 				}
@@ -74,7 +70,6 @@ public class ReportCommand extends ComplexCommand {
 				e.printStackTrace();
 			}
 		}
-
 		ReportReason reportReason = null;
 		String note = null;
 		if (cmd.getArgumentsLength() > 1)
@@ -126,52 +121,50 @@ public class ReportCommand extends ComplexCommand {
 		}
 	}
 
-	@Cmd(args = "UUID|INTEGER|OLYMPA_PLAYERS_INFO", aliases = { "seeauthor" }, registerAliasesInTab = true, permissionName = "REPORT_SEE_COMMAND", syntax = "<joueur | uuid | idReport>", min = 1)
+	@Cmd(args = { "UUID|INTEGER|OLYMPA_PLAYERS_INFO", "INTEGER" }, aliases = { "seeauthor" }, registerAliasesInTab = true, permissionName = "REPORT_SEE_COMMAND", syntax = "<joueur | uuid | idReport>", min = 1)
 	public void see(CommandContext cmd) {
-		List<OlympaReport> reports = new ArrayList<>();
+		//		List<OlympaReport> reports = new ArrayList<>();
 		OlympaPlayerInformations opi = null;
 		long targetId = 0;
-		boolean isSeeAuthor = cmd.isAlias("seeauthor");
-		try {
-			if (cmd.getArgument(0) instanceof Integer) {
-				targetId = cmd.<Integer>getArgument(0);
-				opi = AccountProvider.getter().getPlayerInformations(targetId);
-			} else if (cmd.getArgument(0) instanceof UUID) {
-				opi = AccountProvider.getter().getPlayerInformations(cmd.<UUID>getArgument(0));
-				if (opi != null)
-					targetId = opi.getId();
-			} else if (cmd.getArgument(0) instanceof OlympaPlayerInformations) {
-				targetId = cmd.<OlympaPlayerInformations>getArgument(0).getId();
-				opi = cmd.<OlympaPlayerInformations>getArgument(0);
-			} else {
-				sendUsage(cmd.label);
-				return;
-			}
-			if (opi == null) {
-				player.sendMessage(Prefix.DEFAULT_BAD.formatMessage("Le joueur est introuvable."));
-				return;
-			}
-			if (reports.isEmpty())
-				if (isSeeAuthor)
-					reports.addAll(ReportMySQL.getReportsByAuthor(targetId, 0));
-				else
-					reports.addAll(ReportMySQL.getReportByTarget(targetId));
-		} catch (SQLException e) {
-			e.printStackTrace();
-			sendError("Une erreur est survenu avec la base de données.");
+		int page = cmd.getArgumentsLength() > 1 ? cmd.<Integer>getArgument(1) : 1;
+		//		try {
+		if (cmd.getArgument(0) instanceof Integer) {
+			targetId = cmd.<Integer>getArgument(0);
+			opi = AccountProvider.getter().getPlayerInformations(targetId);
+		} else if (cmd.getArgument(0) instanceof UUID) {
+			opi = AccountProvider.getter().getPlayerInformations(cmd.<UUID>getArgument(0));
+			if (opi != null)
+				targetId = opi.getId();
+		} else if (cmd.getArgument(0) instanceof OlympaPlayerInformations) {
+			targetId = cmd.<OlympaPlayerInformations>getArgument(0).getId();
+			opi = cmd.<OlympaPlayerInformations>getArgument(0);
+		} else {
+			sendUsage(cmd.label);
 			return;
 		}
-		String target = opi != null ? opi.getName() : cmd.getArgument(0) instanceof Integer ? String.valueOf(cmd.<Integer>getArgument(0)) : cmd.<String>getArgument(0);
-		if (reports.isEmpty()) {
-			player.sendMessage(Prefix.DEFAULT_BAD.formatMessage("Aucun report trouvé avec &4%s&c.", target));
+		if (opi == null) {
+			player.sendMessage(Prefix.DEFAULT_BAD.formatMessage("Le joueur est introuvable."));
 			return;
 		}
-		if (cmd.getArgument(0) instanceof Integer)
-			ReportMsg.sendPanelId(sender, reports.get(0));
-		else if (isSeeAuthor)
-			ReportMsg.sendPanelAuthor(sender, target, reports);
+		//			if (reports.isEmpty())
+		//				if (isSeeAuthor)
+		//					reports.addAll(ReportMySQL.getReportsByAuthor(targetId, 0));
+		//				else
+		//					reports.addAll(ReportMySQL.getReportByTarget(targetId));
+		//		} catch (SQLException e) {
+		//			e.printStackTrace();
+		//			sendError("Une erreur est survenu avec la base de données.");
+		//			return;
+		//		}
+		//		String target = opi.getName();
+		//		if (reports.isEmpty()) {
+		//			player.sendMessage(Prefix.DEFAULT_BAD.formatMessage("Aucun report trouvé avec &4%s&c.", target));
+		//			return;
+		//		}
+		if (cmd.isAlias("seeauthor"))
+			ReportMsg.sendPanelAuthor(sender, opi, page);
 		else
-			ReportMsg.sendPanelTarget(sender, target, reports);
+			ReportMsg.sendPanelTarget(sender, opi, page);
 	}
 
 	@Cmd(args = "INTEGER", permissionName = "REPORT_SEE_COMMAND", syntax = "<idReport>", min = 1)
@@ -196,37 +189,29 @@ public class ReportCommand extends ComplexCommand {
 		ReportMsg.sendPanelId(sender, report);
 	}
 
-	@Cmd(args = "INTEGER", permissionName = "REPORT_SEE_COMMAND", syntax = "[startNumber] [limite]", min = 0)
+	@Cmd(args = "INTEGER", permissionName = "REPORT_SEE_COMMAND", syntax = "[page]", min = 0)
 	public void seeLast(CommandContext cmd) {
-		List<OlympaReport> reports = null;
-		int limit = -1;
-		int startNumber = -1;
-		try {
-			if (cmd.getArgumentsLength() > 0) {
-				if (cmd.getArgument(0) instanceof Integer)
-					startNumber = cmd.<Integer>getArgument(0);
-				if (cmd.getArgumentsLength() > 1 && cmd.getArgument(1) instanceof Integer)
-					limit = cmd.<Integer>getArgument(1);
-				if (limit == -1 || startNumber == -1) {
-					sendIncorrectSyntax(getCommand(getCommand()));
-					return;
-				}
+		//		List<OlympaReport> reports = null;
+		int page = 1;
+		//		try {
+		if (cmd.getArgumentsLength() > 0)
+			if (cmd.getArgument(0) instanceof Integer)
+				page = cmd.<Integer>getArgument(0);
+			else {
+				sendIncorrectSyntax(getCommand(getCommand()));
+				return;
 			}
-			if (limit == -1)
-				limit = 10;
-			if (startNumber == -1)
-				startNumber = 0;
-			reports = ReportMySQL.getLastReports(startNumber, limit);
-		} catch (SQLException e) {
-			e.printStackTrace();
-			sendError("Une erreur est survenu avec la base de données.");
-			return;
-		}
-		if (reports == null) {
-			player.sendMessage(Prefix.DEFAULT_BAD.formatMessage("Aucun report trouvé avec offset = &4%s&c & limit = &4%s&c.", startNumber, limit));
-			return;
-		}
-		ReportMsg.sendPanelLast(sender, reports);
+		//			reports = ReportMySQL.getLastReports(100);
+		//		} catch (SQLException e) {
+		//			e.printStackTrace();
+		//			sendError("Une erreur est survenu avec la base de données.");
+		//			return;
+		//		}
+		//		if (reports == null) {
+		//			player.sendMessage(Prefix.DEFAULT_BAD.formatMessage("Aucun report trouvé."));
+		//			return;
+		//		}
+		ReportMsg.sendPanelLast(sender, page);
 	}
 
 	@Cmd(permissionName = "REPORT_SEE_COMMAND", min = 0)
